<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/welcome_background"
    >



    <EditText
        android:id="@+id/edittext_email"
        android:inputType="textEmailAddress"
        android:paddingStart= "2dp"
        android:paddingEnd="0dp"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:hint="@string/email"
        android:background="#ffffff"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="180dp"
        android:inputType="textPassword"
        android:background="#ffffff"
        android:layout_marginTop="0dp"
        android:layout_height="40dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:background="#009688"/>

    <TextView
        android:id="@+id/textview_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/forgot_password"
        android:layout_marginTop="10dp"
        android:paddingLeft="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="#FFEB3B"
        android:textStyle="bold"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            android:textColor="#000"
            />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/register"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="#FFEB3B"
            android:textStyle="bold"
            />

    </LinearLayout>


</LinearLayout>
