<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeScreen"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/welcome_background"> <!-- Vertical Orientation set -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="110dp"
        android:text="@string/daily_do"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="264dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toSettings"
        android:text="@string/login"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toPersonalInfo"
        android:text="@string/signup"/>



</LinearLayout>